fix blur on safari

--- a/index.css
+++ b/index.css
@@ -39,11 +39,12 @@ h1 {
   position: fixed;
   /* vertical-align: middle; */
   bottom: 0;
-  height: 200%;
-  width: 200vh;
+  height: 100%;
+  width: 100%;
   background-color: rgba(0, 0, 0, 0.4);
   z-index: 99;
   backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
 }
 
 /* pokemon card */
@@ -229,7 +230,7 @@ h1 {
 .loadMore p {
   height: auto;
   margin: 0;
-  margin-top: -1rem;
+  margin-top: -0.5rem;
 }
 
 .spinner {
